mdapi_output_dir/objects/Employee__c.object
<CustomObject>
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    <label>Employee</label>
    
    <nameField>
        
        <displayFormat>Employee-{0000}</displayFormat>
        
        <label>Employee Number</label>
        
        
        <type>AutoNumber</type>
        
    </nameField>
    
    <pluralLabel>Employees</pluralLabel>
    
    
    <sharingModel>ControlledByParent</sharingModel>
    
    
<fields>
        
    <fullName>Active__c</fullName>
        
    <defaultValue>true</defaultValue>
        
        
    <label>Active?</label>
        
        
        
    <type>Checkbox</type>
        
</fields>
    <fields>
        
    <fullName>City__c</fullName>
        
        
    <label>City</label>
        
    <length>20</length>
        
        
        
        
    <type>Text</type>
        
        
</fields>
    <fields>
        
    <fullName>Country__c</fullName>
        
        
    <label>Country</label>
        
    <length>30</length>
        
        
        
        
    <type>Text</type>
        
        
</fields>
    <fields>
        
    <fullName>Degree_Received__c</fullName>
        
        
    <label>Degree Received</label>
        
    <length>30</length>
        
        
        
        
    <type>Text</type>
        
        
</fields>
    <fields>
        
    <fullName>Email__c</fullName>
        
        
    <label>Email</label>
        
        
        
        
    <type>Email</type>
        
        
</fields>
    <fields>
        
    <fullName>First_Name__c</fullName>
        
        
    <label>First Name</label>
        
    <length>30</length>
        
        
        
        
    <type>Text</type>
        
        
</fields>
    <fields>
        
    <fullName>GPA__c</fullName>
        
        
    <inlineHelpText>Only up to 4 decimal places.</inlineHelpText>
        
    <label>GPA</label>
        
    <precision>6</precision>
        
        
    <scale>4</scale>
        
        
        
    <type>Number</type>
        
        
</fields>
    <fields>
        
    <fullName>Last_Name__c</fullName>
        
        
    <label>Last Name</label>
        
    <length>30</length>
        
        
        
        
    <type>Text</type>
        
        
</fields>
    <fields>
        
    <fullName>Phone__c</fullName>
        
        
    <label>Phone</label>
        
        
        
        
    <type>Phone</type>
        
</fields>
    <fields>
        
    <fullName>Position__c</fullName>
        
        
    <label>Position</label>
        
        
        
        
    <type>Picklist</type>
        
    <valueSet>
            
        <restricted>true</restricted>
            
        <valueSetDefinition>
                
                
            <value>
                    
                <fullName>Manager</fullName>
                    
                    
                <label>Manager</label>
                    
            </value>
                
            <value>
                    
                <fullName>Assistant Manager</fullName>
                    
                    
                <label>Assistant Manager</label>
                    
            </value>
                
            <value>
                    
                <fullName>Cashier</fullName>
                    
                    
                <label>Cashier</label>
                    
            </value>
                
            <value>
                    
                <fullName>Stocker</fullName>
                    
                    
                <label>Stocker</label>
                    
            </value>
                
            <value>
                    
                <fullName>Security</fullName>
                    
                    
                <label>Security</label>
                    
            </value>
                
        </valueSetDefinition>
            
    </valueSet>
        
</fields>
    <fields>
        
    <fullName>School_Attended__c</fullName>
        
        
    <label>School Attended</label>
        
    <length>40</length>
        
        
        
        
    <type>Text</type>
        
        
</fields>
    <fields>
        
    <fullName>Social_Security_Number__c</fullName>
        
        
    <label>Social Security Number</label>
        
    <length>11</length>
        
    <maskChar>asterisk</maskChar>
        
    <maskType>ssn</maskType>
        
        
        
        
    <type>EncryptedText</type>
        
</fields>
    <fields>
        
    <fullName>State__c</fullName>
        
        
    <inlineHelpText>Use the state&apos;s initials i.e. GA-Georgia</inlineHelpText>
        
    <label>State</label>
        
    <length>2</length>
        
        
        
        
    <type>Text</type>
        
        
</fields>
    <fields>
        
    <fullName>Store__c</fullName>
        
        
    <label>Store</label>
        
    <referenceTo>Store__c</referenceTo>
        
    <relationshipLabel>Employees</relationshipLabel>
        
    <relationshipName>Employees</relationshipName>
        
    <relationshipOrder>0</relationshipOrder>
        
        
        
        
    <type>MasterDetail</type>
        
        
</fields>
    <fields>
        
    <fullName>Street_Address__c</fullName>
        
        
    <label>Street Address</label>
        
    <length>40</length>
        
        
        
        
    <type>Text</type>
        
        
</fields>
    <fields>
        
    <fullName>Zip__c</fullName>
        
        
    <label>Zip</label>
        
    <length>10</length>
        
        
        
        
    <type>Text</type>
        
        
</fields>
    <listViews>
        
    <fullName>All</fullName>
        
    <filterScope>Everything</filterScope>
        
    <label>All</label>
        
</listViews>
</CustomObject>